refactor: swagger annotations fix
